# omni-imager

./: Dockerfile  README.md  requirements.txt  setup.cfg
etc/: conf.yaml
etc/installer_assets/calamares-configs/: settings.conf
etc/installer_assets/calamares-configs/branding/openEuler/: branding.desc
etc/installer_assets/calamares-configs/modules/: packages.conf
etc/repos/: openEuler-20.03-LTS-SP3.repo  openEuler-20.09.repo  openEuler2103.repo  openEuler2203-LTS.repo
omniimager/: imager.py  installer_maker.py  iso_worker.py  pkg_fetcher.py  rootfs_worker.py
