[metadata]
name = omniimager
version = 0.1
summary = Image Build Service of the Omni Build Platform
description_file =
    README.md
author = Zhenyu Zheng
author_email = zheng.zhenyu@outlook.com
python_requires = >=3.8
url = https://github.com/omnibuildplatform/omni-imager
classifiers =
    Development Status :: 3 - Alpha
    Environment :: OmniBuildPlatform
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mulan PSL v2
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
data_files =
    /etc/omni-imager =
        etc/conf.yaml
        etc/init
        etc/runinstaller
        etc/openEuler.repo
        etc/local.repo
        etc/vmlinuz
        etc/openEuler-minimal.json
    /etc/omni-imager/installer_assets = 
        etc/installer_assets/calamares.tar.gz
        etc/installer_assets/kpmcore.tar.gz
        etc/installer_assets/qca.tar.gz
    /etc/omni-imager/installer_assets/calamares-configs = 
        etc/installer_assets/calamares-configs/settings.conf
    /etc/omni-imager/installer_assets/calamares-configs/modules = 
        etc/installer_assets/calamares-configs/modules/bootloader.conf
        etc/installer_assets/calamares-configs/modules/finished.conf
        etc/installer_assets/calamares-configs/modules/fstab.conf
        etc/installer_assets/calamares-configs/modules/machineid.conf
        etc/installer_assets/calamares-configs/modules/mount.conf
        etc/installer_assets/calamares-configs/modules/packages.conf
        etc/installer_assets/calamares-configs/modules/partition.conf
        etc/installer_assets/calamares-configs/modules/umount.conf
        etc/installer_assets/calamares-configs/modules/unpackfs.conf
    /etc/omni-imager/installer_assets/calamares-configs/branding/openEuler =
        etc/installer_assets/calamares-configs/branding/openEuler/banner.png
        etc/installer_assets/calamares-configs/branding/openEuler/branding.desc
        etc/installer_assets/calamares-configs/branding/openEuler/languages.png
        etc/installer_assets/calamares-configs/branding/openEuler/openEuler.png
        etc/installer_assets/calamares-configs/branding/openEuler/show.qml
        etc/installer_assets/calamares-configs/branding/openEuler/stylesheet.qss
    /etc/omni-imager/installer_assets/systemd-configs =
        etc/installer_assets/systemd-configs/getty@.service
        etc/installer_assets/systemd-configs/serial-getty@.service
    /etc/omni-imager/isolinux = 
        etc/isolinux/isolinux.bin
        etc/isolinux/isolinux.cfg
        etc/isolinux/ldlinux.c32

packages =
    omniimager

[entry_points]
console_scripts =
    omni-imager = omniimager.imager:main
